packages/rocket/rocket-0.5.0-rc.2/contrib/sync_db_pools/codegen/tests/ui-fail-nightly/database-types.stderr
error[E0277]: the trait bound `Unknown: Poolable` is not satisfied
  --> tests/ui-fail-nightly/database-types.rs:6:10
   |
6  | struct A(Unknown);
   |          ^^^^^^^ the trait `Poolable` is not implemented for `Unknown`
   |
   = help: the trait `Poolable` is implemented for `SqliteConnection`
note: required by a bound in `rocket_sync_db_pools::Connection`
  --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
   |
   | pub struct Connection<K, C: Poolable> {
   |                             ^^^^^^^^ required by this bound in `rocket_sync_db_pools::Connection`

error[E0277]: the trait bound `Vec<i32>: Poolable` is not satisfied
  --> tests/ui-fail-nightly/database-types.rs:9:10
   |
9  | struct B(Vec<i32>);
   |          ^^^^^^^^ the trait `Poolable` is not implemented for `Vec<i32>`
   |
   = help: the trait `Poolable` is implemented for `SqliteConnection`
note: required by a bound in `rocket_sync_db_pools::Connection`
  --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
   |
   | pub struct Connection<K, C: Poolable> {
   |                             ^^^^^^^^ required by this bound in `rocket_sync_db_pools::Connection`
